src/index.css
@import "tailwindcss";

@theme {
  --color-green: #2E7D32;
  --color-orange: #FF9800;
}
html{
    font-family: "open-sans", sans-serif;
    line-height: 2;
}
.branding-title {
  font-weight: 700;
  font-style: bold;
  font-variation-settings:
    "wdth" 100;
  font-size: 2.5rem;  
  letter-spacing: -2px;
}
.active-navlink {
   background-color: white;
   color: var(--color-green);
   border-radius: 1rem;
}

